--- a/ChoreApp.Api/appsettings.json
+++ b/ChoreApp.Api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChoreApp": "Host=localhost;Database=choreDb;Username=postgres;Password=postgres"
+    "ChoreApp": "Host=localhost;Database=choredb;Username=choredb;Password=hieukdmcqn1"
   }
   
 }
