--- a/choreapp_frontend/pubspec.yaml
+++ b/choreapp_frontend/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.2.2
   table_calendar: ^3.1.2
   intl: 0.19.0 # Use the latest version
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
