Add more endpoints for frontend developments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dotnet.defaultSolution": "ChoreApp.sln"
+    "dotnet.defaultSolution": "ChoreApp.sln",
+    "cmake.sourceDirectory": "D:/Coding/ChoreAppSchedule/choreapp_frontend/linux"
 }
