--- a/choreapp_frontend/pubspec.yaml
+++ b/choreapp_frontend/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: 0.19.0 # Use the latest version
   provider: ^6.1.2
   firebase_core: ^3.5.0
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
